[gd_scene load_steps=4 format=3 uid="uid://d3jxdog6ffevl"]

[ext_resource type="Theme" uid="uid://c6d1evfkgvd7w" path="res://assets/ui/base_theme.tres" id="1_mmpqy"]
[ext_resource type="Script" uid="uid://djbkh8x5xn8qh" path="res://src/ui/pause_menu.gd" id="1_yqfnv"]
[ext_resource type="PackedScene" uid="uid://ct0dj0herf2a6" path="res://src/ui/menus/dex/DexMenu.tscn" id="3_6qq3a"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mmpqy")
script = ExtResource("1_yqfnv")

[node name="Tint" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.11372549, 0.16862746, 0.3254902, 0.5019608)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.22800002
anchor_bottom = 0.22800002
offset_left = 533.0
offset_top = -72.24002
offset_right = 1388.0
offset_bottom = 71.75998
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 0
theme_override_font_sizes/font_size = 144
text = "Death awaits"

[node name="Resume" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.39800003
anchor_bottom = 0.39800003
offset_left = 828.0
offset_top = -39.840027
offset_right = 1093.0
offset_bottom = 40.159973
theme_override_font_sizes/font_size = 72
text = "Resume
"
flat = true

[node name="SoulDex" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 810.0
offset_top = -40.0
offset_right = 1111.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 72
text = "Soul Dex"
flat = true

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.60200006
anchor_bottom = 0.60200006
offset_left = 875.0
offset_top = -40.160034
offset_right = 1045.0
offset_bottom = 39.839966
theme_override_font_sizes/font_size = 72
text = "Quit
"
flat = true
alignment = 0

[node name="DexMenu" parent="." instance=ExtResource("3_6qq3a")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="Resume" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="SoulDex" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="SoulDex" to="." method="_on_soul_dex_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
